--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="descricao">
             <h1>O que é Game Land?</h1>
             <p>Game Land é uma plataforma simples idealizada por Dilson Campêlo em Janeiro de 2022, com o propósito de exercitar seus conhecimentos em javascript puro.</p>
-            <p>"Nada melhor que subir de nível em meus conhecimento do que se divertindo criando jogos, espero que assim como eu me diverti criando, você se divirta jogando!"</p>
+            <p>"Nada melhor que subir de nível em meus conhecimentos do que se divertindo criando jogos, espero que assim como eu me diverti criando, você se divirta jogando!"</p>
         </div>
         <div class="redes">
             <h2>Criador</h2>
@@ -47,12 +47,22 @@
             <a href="https://github.com/dilsoncampelo10" target="_black"><i class="fab fa-github-square"></i></a>
         </div>
     </section>
-    <section>
+    <section class="area-jogos">
         <h1>Jogos disponíveis:</h1>
+        <div id="painel">
+
+        </div>
     </section>
+
+    <footer>
+        <p>&copy;Dilson Campêlo</p>
+        <p>Créditos para o canal <a href="https://www.youtube.com/c/cfbcursos" target="_blank">CFBCursos</a>, com uma excelente playlist ensinando javascript</p>
+    </footer>
      <!--Js do Font Awesome-->
      <script src="https://kit.fontawesome.com/ceb73a0603.js" crossorigin="anonymous"></script>
      <!--Js do app-->
+     <script src="js/app.js"></script>
     <script src="js/slide.js"></script>
+   
 </body>
 </html>
