jogo da forca finalizado

--- a/forca.html
+++ b/forca.html
@@ -25,7 +25,13 @@
             <button id="validar">Validar</button>
             <button id="reiniciar">Reiniciar</button>
         </div>
+        <div class="link_retorno">
+            <i class="fas fa-undo-alt"></i>
+            <a href="index.html">Voltar para página principal</a>
+        </div>
     </section>
     <script src="js/forca.js"></script>
+     <!--Js do Font Awesome-->
+     <script src="https://kit.fontawesome.com/ceb73a0603.js" crossorigin="anonymous"></script>
 </body>
 </html>
