--- a/forca.html
+++ b/forca.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da forca</title>
-    <link rel="stylesheet" href="css/forca.css">
+    <link rel="stylesheet" href="css/jogo.css">
 </head>
 <body>
     <section class="container">
@@ -30,6 +30,7 @@
             <a href="index.html">Voltar para página principal</a>
         </div>
     </section>
+    <!--Js do app-->
     <script src="js/forca.js"></script>
      <!--Js do Font Awesome-->
      <script src="https://kit.fontawesome.com/ceb73a0603.js" crossorigin="anonymous"></script>
