--- a/pong.html
+++ b/pong.html
@@ -1,1 +1,39 @@
-<h1>Em breve</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jogo do Pong</title>
+    <link rel="stylesheet" href="css/jogo.css">
+</head>
+<body>
+    <section class="principal">
+        <div class="area_jogo">
+            <div class="barra esquerda"></div>
+            <div class="bola"></div>
+            <div class="barra direita"></div>
+        </div>
+        <div class="area_painel">
+            <div>
+                <label>Pontos</label>
+                <input type="text" id="pontos">
+            </div>
+            <div>
+                <div id="area_botoes">
+                    <button>Iniciar</button>
+                    
+                </div>
+            </div>
+        </div>
+       
+        <div class="link_retorno">
+            <i class="fas fa-undo-alt"></i>
+            <a href="index.html">Voltar para página principal</a>
+        </div>
+    </section>
+
+         <!--Js do Font Awesome-->
+         <script src="https://kit.fontawesome.com/ceb73a0603.js" crossorigin="anonymous"></script>
+</body>
+</html>
