--- a/pong.html
+++ b/pong.html
@@ -35,5 +35,7 @@
 
          <!--Js do Font Awesome-->
          <script src="https://kit.fontawesome.com/ceb73a0603.js" crossorigin="anonymous"></script>
+         <!--Js do app-->
+         <script src="js/pong.js"></script>
 </body>
 </html>
